[gd_scene load_steps=16 format=2]

[ext_resource path="res://Player/Model.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Player/CameraRig.gd" type="Script" id=3]
[ext_resource path="res://assets/icons/target.png" type="Texture" id=4]
[ext_resource path="res://Player/WeaponSwitcher.gd" type="Script" id=5]
[ext_resource path="res://Player/InteractionArea.gd" type="Script" id=7]
[ext_resource path="res://assets/sounds/pickup-weapon.wav" type="AudioStream" id=8]
[ext_resource path="res://Player/Resources.gd" type="Script" id=9]
[ext_resource path="res://assets/characters/vest.obj" type="ArrayMesh" id=10]
[ext_resource path="res://assets/materials/lowpoly_material.tres" type="Material" id=11]
[ext_resource path="res://UI/ProgressBar3D.tscn" type="PackedScene" id=12]

[sub_resource type="BoxShape" id=8]
extents = Vector3( 0.25, 0.75, 0.25 )

[sub_resource type="PlaneMesh" id=9]
size = Vector2( 1, 1 )

[sub_resource type="SpatialMaterial" id=10]
flags_transparent = true
flags_unshaded = true
flags_no_depth_test = true
albedo_texture = ExtResource( 4 )

[sub_resource type="BoxShape" id=11]
extents = Vector3( 0.75, 1, 0.75 )

[node name="Player" type="KinematicBody"]
script = ExtResource( 2 )

[node name="Model" parent="." instance=ExtResource( 1 )]

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, 0 )
shape = SubResource( 8 )

[node name="Resources" type="Spatial" parent="."]
script = ExtResource( 9 )

[node name="WeaponSwitcher" type="Spatial" parent="."]
script = ExtResource( 5 )
default_weapon = "Gun"

[node name="LookAtCursor" type="Position3D" parent="."]

[node name="CameraRig" type="Position3D" parent="."]
transform = Transform( 0.707107, 0.612373, -0.353553, 0, 0.5, 0.866025, 0.707107, -0.612372, 0.353553, 0, 0, 0 )
script = ExtResource( 3 )

[node name="Camera" type="Camera" parent="CameraRig"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 10 )
current = true

[node name="ReloadingBar" parent="." instance=ExtResource( 12 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.72049, 0 )

[node name="Cursor" type="Spatial" parent="."]

[node name="CursorMesh" type="MeshInstance" parent="Cursor"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 9 )
material/0 = SubResource( 10 )

[node name="CursorMesh2" type="MeshInstance" parent="Cursor"]
transform = Transform( -1, 8.74228e-08, 0, 3.82137e-15, 4.37114e-08, 1, 8.74228e-08, 1, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 9 )
material/0 = SubResource( 10 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="InteractionArea" type="Area" parent="."]
script = ExtResource( 7 )

[node name="CollisionShape" type="CollisionShape" parent="InteractionArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -0.760002 )
shape = SubResource( 11 )

[node name="UseAudio" type="AudioStreamPlayer" parent="InteractionArea"]
stream = ExtResource( 8 )

[node name="Vest" type="Spatial" parent="."]
visible = false

[node name="Vest" type="MeshInstance" parent="Vest"]
transform = Transform( -1, 0, -3.25841e-07, 0, 1, 0, 3.25841e-07, 0, -1, 0, 0, 0 )
mesh = ExtResource( 10 )
material/0 = ExtResource( 11 )

[connection signal="area_entered" from="InteractionArea" to="InteractionArea" method="_on_InteractionArea_area_entered"]
[connection signal="area_exited" from="InteractionArea" to="InteractionArea" method="_on_InteractionArea_area_exited"]
